--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -7,6 +7,7 @@
 
   padding: 1rem 2rem;
   background: rgba(255, 255, 255, 0.25);
+  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -64,13 +65,13 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        color: var(--secodary-color);
+        color: var(--secondary-color);
       }
     }
 
     &:hover {
       div {
-        background-color: var(--secodary-color);
+        background: var(--secondary-color);
       }
     }
   }
@@ -89,7 +90,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: var(--secodary-color);
+  background-color: var(--secondary-color);
 
   svg {
     width: 70%;
@@ -105,6 +106,7 @@
     z-index: 5;
 
     padding: 1rem;
+
     width: 80%;
     height: 100vh;
 
@@ -117,5 +119,54 @@
     background-color: var(--white-color);
     background-size: cover;
     background-repeat: repeat;
+
+    /* top box shadow */
+    box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
+
+    svg {
+      width: 35px;
+      height: 35px;
+      color: var(--secondary-color);
+      margin: 0.5rem 1rem;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+
+      li {
+        margin: 1rem;
+
+        a {
+          color: var(--gray-color);
+          text-decoration: none;
+          font-size: 1rem;
+          text-transform: uppercase;
+          font-weight: 500;
+
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            color: var(--secondary-color);
+          }
+        }
+      }
+    }
+
+    @media screen and (min-width: 900px) {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    display: none;
   }
 }
